// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WalletListItemSkeleton should render wallet list skeleton when isCompact = false 1`] = `
<div>
  <table>
    <tbody
      data-testid="WalletListSkeleton"
    >
      <tr
        class="TableRow__TableRowStyled-sc-y9j4av-0 jRikRC"
        data-testid="TableRow"
      >
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 kjAxRM items-center space-x-4"
          >
            <span>
              <span
                class="flex items-center leading-none"
              >
                <span
                  class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                  style="width: 18px; height: 18px;"
                >
                  ‌
                </span>
                ‌
              </span>
            </span>
            <div
              class="flex items-center border-l border-theme-secondary-300 dark:border-theme-secondary-800 pl-4 ml-4 space-x-4"
            >
              <div
                class="Circle__CircleWrapper-sc-d5u41q-0 egSsGQ border-transparent ring-theme-background"
              >
                <span>
                  <span
                    class="flex items-center leading-none"
                  >
                    <span
                      class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                      style="width: 44px; height: 44px; border-radius: 50%;"
                    >
                      ‌
                    </span>
                    ‌
                  </span>
                </span>
              </div>
            </div>
            <span>
              <span
                class="flex items-center leading-none"
              >
                <span
                  class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                  style="width: 200px; height: 16px;"
                >
                  ‌
                </span>
                ‌
              </span>
            </span>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq justify-center"
          >
            <span>
              <span
                class="flex items-center leading-none"
              >
                <span
                  class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                  style="width: 100px; height: 16px;"
                >
                  ‌
                </span>
                ‌
              </span>
            </span>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq justify-end"
          >
            <span>
              <span
                class="flex items-center leading-none"
              >
                <span
                  class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                  style="width: 150px; height: 16px;"
                >
                  ‌
                </span>
                ‌
              </span>
            </span>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq justify-end"
          >
            <span>
              <span
                class="flex items-center leading-none"
              >
                <span
                  class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                  style="width: 100px; height: 16px;"
                >
                  ‌
                </span>
                ‌
              </span>
            </span>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 cxSvRM justify-end text-theme-secondary-text"
          >
            <button
              class="OriginalButton__StyledButton-sc-o0fs2j-0 kkDhXe ml-3 my-auto "
              data-testid="WalletHeader__send-button"
              disabled=""
              type="button"
            >
              <div
                class="flex items-center space-x-2"
              >
                Send
              </div>
            </button>
            <div
              class="ml-3"
              data-testid="WalletHeader__more-button"
            >
              <button
                class="OriginalButton__StyledButton-sc-o0fs2j-0 kkDhXe w-11 flex-1 text-white bg-theme-primary-600 hover:bg-theme-primary-700"
                disabled=""
                type="button"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  <div
                    class="sc-bdvvtL qGXhc"
                    height="20"
                    width="20"
                  >
                    <svg>
                      ellipsis-vertical.svg
                    </svg>
                  </div>
                </div>
              </button>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`WalletListItemSkeleton should render wallet list skeleton when isCompact = true 1`] = `
<div>
  <table>
    <tbody
      data-testid="WalletListSkeleton"
    >
      <tr
        class="TableRow__TableRowStyled-sc-y9j4av-0 jRikRC"
        data-testid="TableRow"
      >
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 eNekfl items-center space-x-3"
          >
            <span>
              <span
                class="flex items-center leading-none"
              >
                <span
                  class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                  style="width: 18px; height: 18px;"
                >
                  ‌
                </span>
                ‌
              </span>
            </span>
            <div
              class="flex items-center border-l border-theme-secondary-300 dark:border-theme-secondary-800 pl-3 ml-3 space-x-3"
            >
              <div
                class="Circle__CircleWrapper-sc-d5u41q-0 csrTuU border-transparent ring-theme-background"
              >
                <span>
                  <span
                    class="flex items-center leading-none"
                  >
                    <span
                      class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                      style="width: 20px; height: 20px; border-radius: 50%;"
                    >
                      ‌
                    </span>
                    ‌
                  </span>
                </span>
              </div>
            </div>
            <span>
              <span
                class="flex items-center leading-none"
              >
                <span
                  class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                  style="width: 200px; height: 16px;"
                >
                  ‌
                </span>
                ‌
              </span>
            </span>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iTMWpD justify-center"
          >
            <span>
              <span
                class="flex items-center leading-none"
              >
                <span
                  class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                  style="width: 100px; height: 16px;"
                >
                  ‌
                </span>
                ‌
              </span>
            </span>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iTMWpD justify-end"
          >
            <span>
              <span
                class="flex items-center leading-none"
              >
                <span
                  class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                  style="width: 150px; height: 16px;"
                >
                  ‌
                </span>
                ‌
              </span>
            </span>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iTMWpD justify-end"
          >
            <span>
              <span
                class="flex items-center leading-none"
              >
                <span
                  class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                  style="width: 100px; height: 16px;"
                >
                  ‌
                </span>
                ‌
              </span>
            </span>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 bfFMyp justify-end text-theme-secondary-text"
          >
            <button
              class="OriginalButton__StyledButton-sc-o0fs2j-0 lcpndT ml-3 text-theme-primary-600 hover:text-theme-primary-700 -mr-3"
              data-testid="WalletHeader__send-button"
              disabled=""
              type="button"
            >
              <div
                class="flex items-center space-x-2"
              >
                Send
              </div>
            </button>
            <div
              class="ml-3"
              data-testid="WalletHeader__more-button"
            >
              <button
                class="OriginalButton__StyledButton-sc-o0fs2j-0 lcpndT w-11 -mr-1.5 text-theme-primary-300 hover:text-theme-primary-600"
                disabled=""
                type="button"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  <div
                    class="sc-bdvvtL qGXhc"
                    height="20"
                    width="20"
                  >
                    <svg>
                      ellipsis-vertical.svg
                    </svg>
                  </div>
                </div>
              </button>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
